@@ -19,9 +19,9 @@ GetCEL=41
 PutCEL=53
 
 [DrawArea]
-Zoom=4
-ZoomLeft=58
-ZoomTop=93
+Zoom=3
+ZoomLeft=0
+ZoomTop=34
 
 [BasicControls]
 Tool0=DRAW
@@ -55,5 +55,5 @@ Selected4=4
 Selected5=5
 Selected6=6
 Selected7=7
-ActiveColor=4
+ActiveColor=3
 
